--- a/css/main.css
+++ b/css/main.css
@@ -2472,6 +2472,12 @@ div.jfilestyle label:hover {
   display: block;
 }
 
+.thread_image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 .thread.__min .thread_image {
   height: 166px;
 }
