--- a/css/main.css
+++ b/css/main.css
@@ -1918,10 +1918,27 @@ div.jfilestyle label:hover {
 .left-bar_button {
   display: block;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .left-bar_button:last-child {
   margin-bottom: 0;
+}
+
+.left-bar_langs {
+  display: flex;
+  justify-content: center;
+}
+
+.left-bar_lang {
+  padding: 0 5px;
+  text-decoration: none;
+  color: #000;
+  font-size: 14px;
+}
+
+.left-bar_lang.active {
+  color: #D4302F;
 }
 
 .logo {
