--- a/css/main.css
+++ b/css/main.css
@@ -3488,6 +3488,10 @@ div.jfilestyle label:hover {
     height: 130px;
   }
 
+  .thread.__min > a {
+    height: 190px;
+  }
+
   .thread_content {
     padding: 10px 10px 41px;
   }
