--- a/css/main.css
+++ b/css/main.css
@@ -416,16 +416,12 @@ div.jfilestyle label:hover {
 }
 
 .about {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
   padding-left: 100px;
   pointer-events: none;
   z-index: 1;
   background-color: #fff !important;
+  overflow: auto;
+  height: 773px;
 }
 
 .about_content {
@@ -443,7 +439,6 @@ div.jfilestyle label:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  margin-left: -50px;
   margin-top: 10px;
 }
 
@@ -1195,6 +1190,7 @@ div.jfilestyle label:hover {
   bottom: 0;
   left: 100px;
   right: 0;
+  z-index: 20;
 }
 
 .footer_row {
