--- a/css/main.css
+++ b/css/main.css
@@ -465,7 +465,7 @@ div.jfilestyle label:hover {
 }
 
 .about_player .audioplayer.audioplayer-playing .audioplayer-playpause {
-  background: url(../img/pause-2.svg) center center no-repeat !important;
+  background: url("../img/pause-2.svg") center center no-repeat !important;
   background-size: 19px auto !important;
   background-color: #fff;
   border: 2px solid #E4E4E4;
